--- a/apk/tests/MedicalPermissionsTestApp/AndroidManifest.xml
+++ b/apk/tests/MedicalPermissionsTestApp/AndroidManifest.xml
@@ -24,6 +24,7 @@
     <uses-permission android:name="android.permission.health.READ_MEDICAL_DATA_LABORATORY_RESULTS"/>
     <uses-permission android:name="android.permission.health.READ_MEDICAL_DATA_MEDICATIONS"/>
     <uses-permission android:name="android.permission.health.READ_MEDICAL_DATA_PERSONAL_DETAILS"/>
+    <uses-permission android:name="android.permission.health.READ_MEDICAL_DATA_PRACTITIONER_DETAILS"/>
     <uses-permission android:name="android.permission.health.READ_MEDICAL_DATA_PREGNANCY"/>
     <uses-permission android:name="android.permission.health.READ_MEDICAL_DATA_PROBLEMS"/>
     <uses-permission android:name="android.permission.health.READ_MEDICAL_DATA_PROCEDURES"/>
