--- a/apk/tests/MedicalPermissionsTestApp/AndroidManifest.xml
+++ b/apk/tests/MedicalPermissionsTestApp/AndroidManifest.xml
@@ -29,6 +29,7 @@
     <uses-permission android:name="android.permission.health.READ_MEDICAL_DATA_PROBLEMS"/>
     <uses-permission android:name="android.permission.health.READ_MEDICAL_DATA_PROCEDURES"/>
     <uses-permission android:name="android.permission.health.READ_MEDICAL_DATA_SOCIAL_HISTORY"/>
+    <uses-permission android:name="android.permission.health.READ_MEDICAL_DATA_VISITS"/>
     <uses-permission android:name="android.permission.health.READ_MEDICAL_DATA_VITAL_SIGNS"/>
     <uses-permission android:name="android.permission.health.WRITE_MEDICAL_DATA"/>
     <uses-permission android:name="android.permission.MANAGE_HEALTH_DATA"/>
