Grant Permissions: Build Health&Fitness grant multiple granular permissions on Wear
To unblock from the flag not found test failure in b/374745549, in this CL we create a temporary new H&F flag to use in H&F module.
We have b/376306210 filed to trunk stable flag team, to track replacing the H&F flag with permission module flag.

Next 2 CLs: grant single data type permissions, grant background permission.

Flag: com.android.healthfitness.flags.replace_body_sensor_permission_enabled
Test: Build emulator, request heart rate, spo2, skin temp from test app, grant via UI, dumpsys see TestApp granted permissions.
UI recording: https://screencast.googleplex.com/cast/NjQ3OTM4ODUxMzE0MDczNnw5NDJiMTI4MC05ZQ#t=16
UI figma: go/ah-permissions-figma
Bug:364638912
Bug:364643447

Change-Id: I69890c9de6f02cbbe8fe693f46721f3fda30623d

--- a/apk/AndroidManifest.xml
+++ b/apk/AndroidManifest.xml
@@ -128,6 +128,11 @@
         </activity>
 
         <activity
+            android:name=".permissions.request.wear.WearGrantPermissionsActivity"
+            android:exported="false">
+        </activity>
+
+        <activity
             android:name=".route.RouteRequestActivity"
             android:excludeFromRecents="true"
             android:exported="true"
