Add ktfmt and ktlint hooks to preupload.cfg
This will help to ensure that Kotlin code is formatted correctly and that it follows the Android Kotlin style guide.

Bug: 338184641
Change-Id: Ide363ea56b1ac2fdbf4f14752d33e7bc8f564e8d
Test: Manual 
Flag: NONE config change

--- a/PREUPLOAD.cfg
+++ b/PREUPLOAD.cfg
@@ -6,5 +6,7 @@ commit_msg_changeid_field = true
 
 [Hook Scripts]
 checkstyle_hook = ${REPO_ROOT}/prebuilts/checkstyle/checkstyle.py --sha ${PREUPLOAD_COMMIT}
+ktfmt_hook = ${REPO_ROOT}/external/ktfmt/ktfmt.py --check ${PREUPLOAD_COMMIT}
+ktlint_hook = ${REPO_ROOT}/prebuilts/ktlint/ktlint.py --no-verify-format -f ${PREUPLOAD_FILES}
 flag_hook = ${REPO_ROOT}/frameworks/base/packages/SystemUI/flag_check.py --msg=${PREUPLOAD_COMMIT_MESSAGE} --files=${PREUPLOAD_FILES} --project=${REPO_PATH}
 
