--- a/apk/AndroidManifest.xml
+++ b/apk/AndroidManifest.xml
@@ -117,6 +117,11 @@
         </activity>
 
         <activity
+            android:name=".permissions.app.wear.WearViewAppInfoPermissionsActivity"
+            android:exported="false">
+        </activity>
+
+        <activity
             android:name=".permissions.request.PermissionsActivity"
             android:excludeFromRecents="true"
             android:exported="true"
