Adds CTS tests for PHR request permissions.
Bug: 366149378
Bug: 344885216
Bug: 373616667
Flag: com.android.healthfitness.flags.personal_health_record
Test: atest
Change-Id: I85232d0e5dc5fcd61a9ac7af1188fb24d9e902e8

--- a/tests/cts/TestApp2/AndroidManifest.xml
+++ b/tests/cts/TestApp2/AndroidManifest.xml
@@ -20,6 +20,13 @@
   <uses-permission android:name="android.permission.health.READ_HEIGHT"/>
   <uses-permission android:name="android.permission.health.WRITE_HEIGHT"/>
 
+  <uses-permission android:name="android.permission.health.READ_HEALTH_DATA_HISTORY"/>
+  <uses-permission android:name="android.permission.health.READ_HEALTH_DATA_IN_BACKGROUND"/>
+
+  <uses-permission android:name="android.permission.health.READ_MEDICAL_DATA_ALLERGIES_INTOLERANCES"/>
+  <uses-permission android:name="android.permission.health.READ_MEDICAL_DATA_CONDITIONS"/>
+  <uses-permission android:name="android.permission.health.WRITE_MEDICAL_DATA"/>
+
   <application android:label="Health Connect cts test app 2">
     <uses-library android:name="android.test.runner"/>
 
