PermissionManager: Build Wear Health PermissionManager flow - Vitals page
This page is the first page in PermissionManager->Fitness and wellness in  go/ah-permissions-figma.

Flag: com.android.healthfitness.flags.replace_body_sensor_permission_enabled
Test: Build, click into PermissionManager->Fitness and wellness, see Vitals page
Screenshot: https://screenshot.googleplex.com/8LiAnV2PDYFQWsG
Bug: 364638912
Bug: 364643019
Bug: 377583771
Bug: 377876723
Change-Id: I90fb23fdd5dd8eea5aed94ed88981e97900bfb57

--- a/apk/AndroidManifest.xml
+++ b/apk/AndroidManifest.xml
@@ -122,6 +122,11 @@
         </activity>
 
         <activity
+            android:name=".permissions.connectedapps.wear.WearSettingsPermissionActivity"
+            android:exported="false">
+        </activity>
+
+        <activity
             android:name=".permissions.request.PermissionsActivity"
             android:excludeFromRecents="true"
             android:exported="true"
