--- a/tests/integrationtests/AndroidManifest.xml
+++ b/tests/integrationtests/AndroidManifest.xml
@@ -30,6 +30,8 @@
         <package android:name="android.healthconnect.test.app"/>
         <package android:name="android.healthconnect.test.app2"/>
         <package android:name="android.healthconnect.test.app3"/>
+        <package android:name="android.healthconnect.test.app4"/>
+        <package android:name="android.healthconnect.test.app5"/>
     </queries>
 
     <uses-permission android:name="android.permission.health.READ_BODY_FAT"/>
