HealthFitness: Rename WearLegacy test app to BodySensors.
There is nothing Wear-specific about this test app, it is just a
legacy app using the BODY_SENSORS permission (we had just thought
the logic applied to Wear originally). Rename the test app so
that it can more easily be resused in tests of phone logic as
well.

Bug: 384797157
Change-Id: Id61554ffa6cad9e558d0f4179339a334d9ca21ee
Flag: com.android.healthfitness.flags.replace_body_sensor_permission_enabled
Test: atest HealthConnectControllerPermissionTests:com.android.healthconnect.controller.tests.shared.HealthPermissionReaderTest

--- a/apk/tests/WearTestApp/AndroidManifest.xml
+++ b/apk/tests/WearTestApp/AndroidManifest.xml
@@ -24,6 +24,7 @@
       android:label="Wear Test App">
     <uses-library android:name="android.test.runner"/>
 
+  <!-- Note: There is no rationale intent filter below (okay for Wear apps). -->
     <activity android:name=".MainActivity"
         android:label="MainActivity"
         android:exported="true">
