HealthPermissions: Skip intent check for split-permission apps.
With the BODY_SENSORS permission deprecation, apps that were previously requesting BODY_SENSORS will be automatically updated to request READ_HEART_RATE (via the split-permission mechanism). These apps won't have support for the rationale intent, so we need to relax that requirement so that they can continue to function.

Bug: 384797157
Test: atest HealthConnectControllerPermissionTests:com.android.healthconnect.controller.tests.permissions.request.PermissionsActivityTest
Flag: android.permission.flags.replace_body_sensor_permission_enabled

Change-Id: I65f25543841df7bf7939298fa32223bad406e36d

--- a/apk/tests/BodySensorsTestApp/AndroidManifest.xml
+++ b/apk/tests/BodySensorsTestApp/AndroidManifest.xml
@@ -17,11 +17,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="android.healthconnect.controller.test.app6">
 
-  <!-- Will split to health-related permission READ_HEART_RATE on SDK Baklava. -->
+  <!-- Will split to health-related permission READ_HEART_RATE and -->
+  <!-- READ_HEALTH_DATA_IN_BACKGROUND on SDK Baklava. -->
   <uses-permission android:name="android.permission.BODY_SENSORS"/>
+  <uses-permission android:name="android.permission.BODY_SENSORS_BACKGROUND"/>
 
   <application
-      android:label="Wear Legacy Test App">
+      android:label="Body Sensors Test App">
     <uses-library android:name="android.test.runner"/>
 
     <activity android:name=".MainActivity"
