Override application in the test manifest
Otherwise HealthConnectApplication is referenced, leading to a
ClassNotFoundException when the system tries to create the application.

Bug: 391149458
Flag: TEST_ONLY
Test: atest
Change-Id: Ib04e7766da561af1f6cce82991a771b285e47856

--- a/apk/tests/AndroidManifest.xml
+++ b/apk/tests/AndroidManifest.xml
@@ -17,9 +17,13 @@
 
 <manifest
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.android.healthconnect.controller.tests">
 
-  <application android:debuggable="true">
+  <application
+      android:name="dagger.hilt.android.testing.HiltTestApplication"
+      android:debuggable="true"
+      tools:replace="android:name">
     <uses-library android:name="android.test.runner" />
     <activity
         android:name=".TestActivity"
