Add SkipOnboardingActivity for cts tests on debuggable builds
Bug: 391208448
Flag: NONE test
Test: atest CtsHealthConnectControllerTestCases
Test: adb shell am start -a android.health.connect.action.SKIP_HEALTH_CONNECT_ONBOARDING
Change-Id: I14b0455139d3b82462c90c261b661ca442c38009

--- a/apk/AndroidManifest.xml
+++ b/apk/AndroidManifest.xml
@@ -53,6 +53,7 @@
             <intent-filter android:priority="1">
                 <action android:name="android.health.connect.action.HEALTH_HOME_SETTINGS" />
                 <action android:name="android.health.connect.action.MANAGE_HEALTH_DATA" />
+                <action android:name="android.health.connect.action.SKIP_HEALTH_CONNECT_ONBOARDING" />
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.DEFAULT" />
@@ -158,6 +159,13 @@
             android:name=".onboarding.OnboardingActivity"
             android:exported="false"
             android:theme="@style/Theme.HealthConnect" />
+
+        <activity
+            android:name=".onboarding.SkipOnboardingActivity"
+            android:configChanges="@integer/nodisplay_config_changes"
+            android:excludeFromRecents="true"
+            android:exported="false"
+            android:theme="@style/Theme.HealthConnect"/>
 
         <activity
             android:name=".exportimport.ExportSetupActivity"
